hphp/test/quick/setter-magic.php.expectf
string(4) "prop"
int(2)
HipHop Fatal error: Cannot access protected property in %s/test/quick/setter-magic.php on line 19
